--- a/.classpath
+++ b/.classpath
@@ -2,17 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/maxamillion/workspace/Bukkit/target/bukkit-1.4.2-R0.1-SNAPSHOT.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/maxamillion/workspace/CraftBukkit/target/craftbukkit-1.4.2-R0.1-SNAPSHOT.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/maxamillion/workspace/ShelfStorage/dist/plugins/PermissionsEx.jar"/>
-	<classpathentry kind="lib" path="/home/maxamillion/workspace/ShelfStorage/dist/plugins/Vault.jar"/>
+	<classpathentry kind="lib" path="D:/BuildTools/PermissionsEx-1.23.1 (1).jar"/>
+	<classpathentry kind="lib" path="D:/BuildTools/Vault.jar"/>
+	<classpathentry kind="lib" path="D:/BuildTools/craftbukkit-1.8.3.jar"/>
+	<classpathentry kind="lib" path="D:/BuildTools/SQLibrary-7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
